compiler/testData/multiplatform/classScopes/missingConstructor/output.txt
-- Common --
Exit code: OK
Output:
compiler/testData/multiplatform/classScopes/missingConstructor/common.kt:1:1: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. You can use -Xexpect-actual-classes flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
expect class Foo {
^^^^^^

-- JVM --
Exit code: COMPILATION_ERROR
Output:
compiler/testData/multiplatform/classScopes/missingConstructor/jvm.kt:1:14: error: 'actual class Foo : Any' has no corresponding members for expected class members:

    expect constructor(s: String): Foo

    The following declaration is incompatible because number of value parameters is different:
        constructor(): Foo

actual class Foo
             ^^^
